added more accurate links

--- a/phylogenize_app/templates/about.html
+++ b/phylogenize_app/templates/about.html
@@ -51,8 +51,8 @@
 <div class="container">
 
 	{{ infotitle("How to cite phylogenize: ") }} If you used <i>phylogenize</i> and found it helpful, please cite the web tool and/or the method as below:<p>
-	  <blockquote><u>Tool:</u> Bradley PH and Pollard KS, "<i>phylogenize</i>: correcting for phylogeny reveals genes associated with microbial distributions." <a href="https://www.biorxiv.org/content/10.1101/425231v2">Submitted</a>.</blockquote>
-	  <blockquote><u>Method:</u> Bradley PH, Nayfach S, and Pollard KS, "Phylogeny-corrected identification of microbial gene families relevant to human gut colonization." <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006242"><i>PLOS Comput Biol</i> 14 (8), e1006242.</a></blockquote>
+	<blockquote><u>Tool:</u> Bradley PH and Pollard KS, "<i>phylogenize</i>: correcting for phylogeny reveals genes associated with microbial distributions." <a href="https://academic.oup.com/bioinformatics/article/36/4/1289/5582265"><i>Bioinformatics</i> (2019), 36 (4).</a>.</blockquote>
+	  <blockquote><u>Method:</u> Bradley PH, Nayfach S, and Pollard KS, "Phylogeny-corrected identification of microbial gene families relevant to human gut colonization." <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006242"><i>PLOS Comput Biol</i> (2018), 14 (8), e1006242.</a></blockquote>
 					<p>
 
 					{{ infotitle("How to contact support: ") }}
