--- a/phylogenize_app/templates/base.html
+++ b/phylogenize_app/templates/base.html
@@ -43,7 +43,7 @@
 
 			<footer class="footer">
 				<div class="container-fluid">
-					<a href="https://doi.org/10.1093/bioinformatics/btz722">Bradley PH and Pollard KS (2019), <i>Bioinformatics</i></a>. The <a href="http://docpollard.org">Pollard Lab</a> is at the <a href="https://gladstone.org/institutes/data-science-and-biotechnology">Gladstone Institute of Data Science and Biotechnology</a> (GIDB).
+					<a href="https://doi.org/10.1093/bioinformatics/btz722">Bradley PH and Pollard KS (2019), <i>Bioinformatics</i></a>. The <a href="http://docpollard.org">Pollard Lab</a> is at the <a href="https://gladstone.org/institutes/data-science-and-biotechnology">Gladstone Institute of Data Science and Biotechnology</a> (GIDB). The <a href="http://bradleylab.science">Bradley Lab</a> is at Ohio State in the <a href="microbiology.osu.edu">Dept. of Microbiology</a>.
 				</div>
 			</footer>
 
