Removed inline BURST text

--- a/phylogenize_app/templates/tutorial.html
+++ b/phylogenize_app/templates/tutorial.html
@@ -261,7 +261,7 @@
         <p><em>phylogenize</em> works by mapping these ASVs back to <a
             href="https://www.github.com/snayfach/MIDAS">MIDAS</a> genome
             clusters using the fast aligner <a
-            href="https://github.com/knights-lab/BURST">BURST</a>. The default
+            href="https://github.com/torognes/vsearch">vsearch</a>. The default
             threshold for matching a genome cluster is 98.5% sequence identity,
             since we found that this gives a reasonable sensitivity-specificity
             threshold. Ambiguous matches are discarded, and reads/abundances
